# gltrace_rs

./: Cargo.toml  README.md
glhooker/: Cargo.toml  README.md
glhooker/src/: errors.rs  lib.rs  wrapper.rs
src/: errors.rs  hooks.rs  lib.rs  types.rs
src/generator/: generator.rs  html_generator.rs  mod.rs  text_generator.rs
src/gpu_query/: enums.rs  errors.rs  mod.rs
src/trace/: enums.rs  mod.rs  resource.rs
