workspace = { members = ["glhooker"] }
[package]
name = "gltrace_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build="./build/main.rs"

[dependencies]
glhooker = {path = "./glhooker", version = "*"}
gl_loader = "*"
"gl" = "*"

[dev-dependencies]


[build-dependencies]
gl_generator = "*"
