workspace = { members = ["glhooker"] }
[package]
name = "gltrace_rs"
version = "0.1.0"
edition = "2021"
build="./build/main.rs"

[features]
default=["gpu_queries"]
gpu_queries = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glhooker = {path = "./glhooker", version = "*"}
gl_loader = "*"
chrono = "*"
itertools = "0.13.0"

[dev-dependencies]
gl = "*"

[build-dependencies]
gl_generator = "*"

